<resources>
    <string name="app_name">Piano Trainer</string>
    <string name="button_play">Play Sequence</string>
    <string name="button_play_stop">Stop Playback</string>
    <string name="submit_play">Submit</string>
    <string name="quiz_correct">Everything correct!</string>
    <string name="button_ok">OK</string>
    <string name="quiz_incorrect">The following tones were wrong:\n%1$s</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="button_send">Upload Stats</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="next">Next</string>
    <string name="correct_tone">Correct tone</string>
    <string name="select_error">Select incorrect tones:</string>
    <string name="quiz_duration">Duration error: %1$.2f s</string>
    <string name="quiz_volume">Volume error: %1$d%%</string>
    <string name="quiz_tone_duration">Tone duration: %1$.2f s</string>


    <!-- Stats -->
    <string name="stat_loading">Loading…</string>
    <string name="button_reset">Reset</string>
    <string name="stat_count">Finished: %1$s</string>
    <string name="button_stats">Statistics</string>
    <string name="correct_count">Correct: %1$s</string>
    <string name="message_reset_stats">Do you really want to reset the statistics?</string>
    <string name="legend_duration">Duration</string>
    <string name="legend_volume">Volume</string>
    <string name="difficulty_levels">Difficulty Levels</string>

    <!-- Strings related to Settings -->
    <string name="multi_select_invalid_selection">Invalid selection!</string>

    <string name="pref_max_errors_key">max_errors</string>
    <string name="pref_max_errors">Max Errors</string>
    <string-array name="pref_max_errors_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_num_tones_key">num_tones</string>
    <string name="pref_num_tones">Num Tones</string>
    <string-array name="pref_num_tones_list_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="pref_sequence_types_key">seq_types</string>
    <string name="pref_sequence_types">Sequence Types</string>
    <string-array name="pref_sequence_types_values">
        <item>scale</item>
        <item>arpeggio</item>
    </string-array>
    <string-array name="pref_sequence_types_entries">
        <item>Scale</item>
        <item>Arpeggio</item>
    </string-array>

    <string name="pref_tone_duration_key">tone_duration</string>
    <string name="pref_tone_duration">Tone Duration</string>
    <string-array name="pref_tone_duration_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="pref_tone_duration_entries">
        <item>0.60s</item>
        <item>0.55s</item>
        <item>0.50s</item>
        <item>0.45s</item>
        <item>0.40s</item>
        <item>0.35s</item>
        <item>0.30s</item>
        <item>0.25s</item>
        <item>0.20s</item>
        <item>0.15s</item>
    </string-array>

    <string name="pref_duration_error_key">duration_error</string>
    <string name="pref_duration_error">Duration Error</string>
    <string-array name="pref_duration_error_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="pref_duration_error_entries">
        <item>0.10s</item>
        <item>0.09s</item>
        <item>0.08s</item>
        <item>0.07s</item>
        <item>0.06s</item>
        <item>0.05s</item>
        <item>0.04s</item>
        <item>0.03s</item>
        <item>0.02s</item>
        <item>0.01s</item>
    </string-array>

    <string name="pref_volume_error_key">volume_error</string>
    <string name="pref_volume_error">Volume Error</string>
    <string-array name="pref_volume_error_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="pref_volume_error_entries">
        <item>50%</item>
        <item>45%</item>
        <item>40%</item>
        <item>35%</item>
        <item>30%</item>
        <item>25%</item>
        <item>20%</item>
        <item>15%</item>
        <item>10%</item>
        <item>5%</item>
    </string-array>

    <string name="error_type_duration_positive">Too long</string>
    <string name="error_type_duration_negative">Too short</string>
    <string name="error_type_volume_positive">Too loud</string>
    <string name="error_type_volume_negative">Too quiet</string>

    <string name="error_type_duration">Tone Duration</string>
    <string name="error_type_volume">Tone Volume</string>

    <string name="pref_error_types_key">error_types</string>
    <string name="pref_error_types">Error Types</string>
    <string-array name="pref_error_types_entries">
        <item>@string/error_type_duration</item>
        <item>@string/error_type_volume</item>
    </string-array>
    <string-array name="pref_error_types_values">
        <item>duration</item>
        <item>volume</item>
    </string-array>
    <string-array name="pref_error_types_default_values">
        <item>duration</item>
        <item>volume</item>
    </string-array>

    <string name="pref_use_dynamic_difficulty_key">dynamic_difficulty</string>
    <string name="pref_use_dynamic_difficulty">Dynamic Difficulty</string>

    <string name="dynamic_volume_error_key">dynamic_volume</string>
    <string name="dynamic_duration_error_key">dynamic_duration</string>


</resources>
