<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference android:key="max_errors"
                    android:title="@string/pref_max_errors"
                    android:defaultValue="1"
                    android:entries="@array/pref_max_errors_list_values"
                    android:entryValues="@array/pref_max_errors_list_values"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null">

    </ListPreference>

    <MultiSelectListPreference android:key="@string/pref_sequence_types_key"
                               android:title="@string/pref_sequence_types"
                               android:defaultValue="@array/pref_sequence_types_values"
                               android:entries="@array/pref_sequence_types_entries"
                               android:persistent="true"
                               android:entryValues="@array/pref_sequence_types_values">
    </MultiSelectListPreference>

    <ListPreference android:key="num_tones"
                    android:title="@string/pref_num_tones"
                    android:defaultValue="8"
                    android:entries="@array/pref_num_tones_list_values"
                    android:entryValues="@array/pref_num_tones_list_values"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null">

    </ListPreference>

    <ListPreference android:key="@string/pref_tone_duration_key"
                    android:title="@string/pref_tone_duration"
                    android:defaultValue="0"
                    android:entries="@array/pref_tone_duration_entries"
                    android:entryValues="@array/pref_tone_duration_values">
    </ListPreference>

    <MultiSelectListPreference android:key="@string/pref_error_types_key"
                               android:title="@string/pref_error_types"
                               android:defaultValue="@array/pref_error_types_default_values"
                               android:entries="@array/pref_error_types_entries"
                               android:entryValues="@array/pref_error_types_values">
    </MultiSelectListPreference>

    <CheckBoxPreference android:key="@string/pref_use_dynamic_difficulty_key"
                        android:title="@string/pref_use_dynamic_difficulty"
                        android:defaultValue="true"
                        android:disableDependentsState="true">
    </CheckBoxPreference>

    <ListPreference android:key="@string/pref_duration_error_key"
                    android:dependency="@string/pref_use_dynamic_difficulty_key"
                    android:title="@string/pref_duration_error"
                    android:defaultValue="0"
                    android:entries="@array/pref_duration_error_entries"
                    android:entryValues="@array/pref_duration_error_values">
    </ListPreference>

    <ListPreference android:key="@string/pref_volume_error_key"
                    android:dependency="@string/pref_use_dynamic_difficulty_key"
                    android:title="@string/pref_volume_error"
                    android:defaultValue="0"
                    android:entries="@array/pref_volume_error_entries"
                    android:entryValues="@array/pref_volume_error_values">
    </ListPreference>

</PreferenceScreen>
