<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference android:key="max_errors"
                    android:title="@string/pref_max_errors"
                    android:defaultValue="1"
                    android:entries="@array/pref_max_errors_list_values"
                    android:entryValues="@array/pref_max_errors_list_values"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null">

    </ListPreference>

    <MultiSelectListPreference android:key="@string/pref_sequence_types_key"
                               android:title="@string/pref_sequence_types"
                               android:defaultValue="@array/pref_sequence_types_values"
                               android:entries="@array/pref_sequence_types_entries"
                               android:entryValues="@array/pref_sequence_types_values"
    >
    </MultiSelectListPreference>

</PreferenceScreen>
