<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cubex2.musictrainer.StatsActivity">

    <Button
            android:text="@string/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/stat_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/count_tv" android:layout_margin="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/correct_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correct_tv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/count_tv" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</android.support.constraint.ConstraintLayout>
