<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cubex2.musictrainer.MainActivity">

    <Button
            android:text="@string/button_start"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:textSize="25sp"
            android:id="@+id/start_button" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="onStartClicked" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/button_settings"
            android:layout_width="0dp"
            android:layout_height="65dp" android:id="@+id/settings_button"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/start_button" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:onClick="onSettingsClicked" android:enabled="true"/>
    <Button
            android:text="@string/button_stats"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:id="@+id/stats_button" android:layout_marginTop="8dp"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/settings_button" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:onClick="onStatsClicked"/>
</android.support.constraint.ConstraintLayout>
