<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cubex2.musictrainer.QuizActivity">

    <Button
            android:text="@string/button_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/play_button" android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/submit_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/submit_button"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="9dp"
            android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:enabled="false"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/select_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_error_tv" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/play_button" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="#ff000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginStart="8dp"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="7"
            android:progress="1"
            android:id="@+id/duration_seekBar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/volume_tv" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="7"
            android:progress="1"
            android:id="@+id/volume_seekBar" android:layout_marginBottom="8dp" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/submit_button"/>
    <TextView
            android:text="@string/quiz_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duration_tv" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/duration_seekBar"
            android:layout_marginStart="8dp"
    />
    <TextView
            android:text="@string/quiz_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volume_tv" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/volume_seekBar"
            android:layout_marginStart="8dp"
    />
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:id="@+id/separator"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quiz_list_view" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/duration_tv" app:layout_constraintVertical_bias="0.3"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/select_error_tv"
            android:id="@+id/quiz_list_view" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/duration_tv"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>
